polarization phase completed

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,10 +79,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>publish_date</th>\n",
+       "      <th>media_name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>date</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>week</th>\n",
+       "      <th>title_clean</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>sentiment_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2026-02-07</td>\n",
+       "      <td>usatoday.com</td>\n",
+       "      <td>Polar vortex cold highlights climate change qu...</td>\n",
+       "      <td>https://www.usatoday.com/story/news/nation/202...</td>\n",
+       "      <td>2026-02-07</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2026-02</td>\n",
+       "      <td>2026-02-02/2026-02-08</td>\n",
+       "      <td>Polar vortex cold highlights climate change qu...</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2026-02-07</td>\n",
+       "      <td>livescience.com</td>\n",
+       "      <td>Clean energy is surging — with or without Trump</td>\n",
+       "      <td>https://www.livescience.com/planet-earth/renew...</td>\n",
+       "      <td>2026-02-07</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2026-02</td>\n",
+       "      <td>2026-02-02/2026-02-08</td>\n",
+       "      <td>Clean energy is surging — with or without Trump</td>\n",
+       "      <td>0.5859</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2026-02-06</td>\n",
+       "      <td>bloomberg.com</td>\n",
+       "      <td>Why Some Republicans Voted for More Carbon Emi...</td>\n",
+       "      <td>https://www.bloomberg.com/news/articles/2026-0...</td>\n",
+       "      <td>2026-02-06</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2026-02</td>\n",
+       "      <td>2026-02-02/2026-02-08</td>\n",
+       "      <td>Why Some Republicans Voted for More Carbon Emi...</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2026-02-06</td>\n",
+       "      <td>latimes.com</td>\n",
+       "      <td>How climate change is threatening the future o...</td>\n",
+       "      <td>https://www.latimes.com/sports/olympics/story/...</td>\n",
+       "      <td>2026-02-06</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2026-02</td>\n",
+       "      <td>2026-02-02/2026-02-08</td>\n",
+       "      <td>How climate change is threatening the future o...</td>\n",
+       "      <td>-0.5267</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2026-02-06</td>\n",
+       "      <td>latimes.com</td>\n",
+       "      <td>Letters to the Editor: Climate change easily s...</td>\n",
+       "      <td>https://www.latimes.com/opinion/letters-to-the...</td>\n",
+       "      <td>2026-02-06</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2026-02</td>\n",
+       "      <td>2026-02-02/2026-02-08</td>\n",
+       "      <td>Letters to the Editor: Climate change easily s...</td>\n",
+       "      <td>-0.7814</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  publish_date       media_name  \\\n",
+       "0   2026-02-07     usatoday.com   \n",
+       "1   2026-02-07  livescience.com   \n",
+       "2   2026-02-06    bloomberg.com   \n",
+       "3   2026-02-06      latimes.com   \n",
+       "4   2026-02-06      latimes.com   \n",
+       "\n",
+       "                                               title  \\\n",
+       "0  Polar vortex cold highlights climate change qu...   \n",
+       "1    Clean energy is surging — with or without Trump   \n",
+       "2  Why Some Republicans Voted for More Carbon Emi...   \n",
+       "3  How climate change is threatening the future o...   \n",
+       "4  Letters to the Editor: Climate change easily s...   \n",
+       "\n",
+       "                                                 url        date  year  month  \\\n",
+       "0  https://www.usatoday.com/story/news/nation/202...  2026-02-07  2026      2   \n",
+       "1  https://www.livescience.com/planet-earth/renew...  2026-02-07  2026      2   \n",
+       "2  https://www.bloomberg.com/news/articles/2026-0...  2026-02-06  2026      2   \n",
+       "3  https://www.latimes.com/sports/olympics/story/...  2026-02-06  2026      2   \n",
+       "4  https://www.latimes.com/opinion/letters-to-the...  2026-02-06  2026      2   \n",
+       "\n",
+       "  year_month                   week  \\\n",
+       "0    2026-02  2026-02-02/2026-02-08   \n",
+       "1    2026-02  2026-02-02/2026-02-08   \n",
+       "2    2026-02  2026-02-02/2026-02-08   \n",
+       "3    2026-02  2026-02-02/2026-02-08   \n",
+       "4    2026-02  2026-02-02/2026-02-08   \n",
+       "\n",
+       "                                         title_clean  sentiment  \\\n",
+       "0  Polar vortex cold highlights climate change qu...     0.0000   \n",
+       "1    Clean energy is surging — with or without Trump     0.5859   \n",
+       "2  Why Some Republicans Voted for More Carbon Emi...     0.0000   \n",
+       "3  How climate change is threatening the future o...    -0.5267   \n",
+       "4  Letters to the Editor: Climate change easily s...    -0.7814   \n",
+       "\n",
+       "  sentiment_label  \n",
+       "0         neutral  \n",
+       "1        positive  \n",
+       "2         neutral  \n",
+       "3        negative  \n",
+       "4        negative  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
